src/objects/UHW_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Requirements__c</fullName>
        <label>Campaign Requirements</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division_Links__c</fullName>
        <label>Division Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Employer_Filter__c</fullName>
        <description>Enter names or partial names of Employers to enable the filter in Mobile Organizer.  E.g. &quot;Kaiser&quot; will only show the UHW Campaign to staff with access to Kaiser account.  &quot;Pomona Valley&quot; will only show the UHW Campaign to staff with access to the Pomona Valley Hospital account.</description>
        <label>Employer Filter</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_a_MO_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you want to suppress this UHW Campaign in Mobile Organizer, check this box.</description>
        <label>Not a MO Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Petition_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a campaign that collects petitions</description>
        <label>Petition Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_Links__c</fullName>
        <label>Report Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>UHW Campaign</label>
    <listViews>
        <fullName>Active_Campaigns</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Not_a_MO_Campaign__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campaigns_2015</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015</value>
        </filters>
        <label>Campaigns 2015</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Campaigns_2016</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <filters>
            <field>End_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </filters>
        <label>Campaigns 2016</label>
        <language>en_US</language>
        <sharedTo>
            <group>Data_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Phase_7_Hospital</fullName>
        <columns>NAME</columns>
        <columns>Report_Links__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Phase7</value>
        </filters>
        <label>Phase 7 Hospital</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X2_years</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Start_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/21/2014</value>
        </filters>
        <label>2 years</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>UHW Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UHW Campaigns</pluralLabel>
    <recordTypes>
        <fullName>New_Organizing</fullName>
        <active>true</active>
        <description>New Organizing Campaign Type</description>
        <label>New Organizing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Standard UHW Campaign</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>